# kl_evolution

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: analysis_shifts_time_serie.py  anlysis_model_performances.py
kl_evolution/core/data_objects/: serie.py
kl_evolution/core/features/: kl_divergence.py  ts_analyzer.py
kl_evolution/core/results_formatting/: evaluation.py  plotter.py
kl_evolution/tests/test_data_objects/: test_serie.py
kl_evolution/tests/test_features/: test_kullback_lieber_divergence.py  test_ts_analyzer.py
kl_evolution/tests/test_results_formatting/: test_forecast_evaluation.py  test_plotter.py
