[tool.poetry]
name = "kl-evolution"
version = "0.1.0"
description = "A project aiming to apply Kullback Lieber Divergence to time series"
authors = ["BaptGau <baptiste.gautier@diabolocom.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pandas = "^2.2.3"
statsmodels = "^0.14.3"
mplcyberpunk = "^0.7.1"
setuptools = "^75.1.0"
black = "^24.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
